# ls-pattern-compile

./: .gitignore  .gitmodules  .tmp_run.py  AGENTS.md  CHANGELOG.md  LICENSE  README.md  _tmp_check_import.py  _tmp_check_tiling.py  _tmp_chlog.txt  _tmp_mytype_view.txt  lspattern-analysis-ja.md  mypy-order-analysis.md  ops.py  out.txt  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  rhg.py  test_loader_manual.py  tmp_base_before.txt  tmp_post.txt  tmp_pre.txt  tmp_segment.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature_request.md
.github/workflows/: pytest.yml  release.yml  ruff.yml  typecheck.yml
.local/: changelog.md
.local/issues/: 1-print-global-graph-and-coord2node.md
.local/issues/closed/: 2-generate-cnot-debug-txt-files.md
.local/test/: cnot_coord2node.txt  cnot_physical_nodes.txt  debug_coord2node.py
docs/: distillation_factory.md  graph_block_yaml.md  merge_split_mockup_analysis.md  new_blocks_design.md  port_analysis.md  remap_overview.md  scheduler-merge-workflow.md  testing.md
examples/: __init__.py  canvas_3d.py  canvas_layout_visualization_demo.py  canvas_z_sweep_3d_movie.py  cnot_error_sim.py  cnot_mockup.py  cnot_mockup_v2.py  compiled_canvas_visualization.py  connectedtiling_viz.py  convert_liblsqecc_json.py  corner_elim_test.py  debug_16.py  debug_17.py  debug_18_human.py  debug_19.py  debug_T22.py  debug_T23-2.py  debug_T23.py  debug_T24.py  debug_T25.py  debug_T26.py  debug_T30.py  debug_T31.py  debug_T37.py  debug_T38.py  debug_T39.py  debug_T41.py  debug_T42.py  debug_T43.py  debug_T46.py  debug_T48.py  debug_add_block.ipynb  debug_temporl_layer.ipynb  deform_mockup.py  deform_plus_mockup.py  deform_zero_mockup.py  export_to_graphqomb_studio.py  export_to_studio_demo.py  layered_measure_and_init.py  layered_unit_memory_demo.py  (+32 more)
examples/design/: L_patch.yml  cnot.yml  distillation_canvas.yml  graph_block_canvas.yml  hadamard_canvas.yml  merge_split.yml  patch_expansion_x.yml  patch_expansion_z.yml  patch_rotation2.yml  short_x_memory_canvas.yml  short_z_memory_canvas.yml
examples/design/blocks/: graph_block.json  graph_block.yml
examples/design/utils/: _patch_rotation2_bottom.yml  _patch_rotation2_left.yml  _patch_rotation2_right.yml  _patch_rotation2_top.yml
examples/examples/: ruff_report_T34.json  ruff_stats_T34_by_code.csv  ruff_stats_T34_by_file.csv
examples/legacy/: AGENTS_bom_T35.md  AGENTS_preview_T35.txt  debug_T27.py  debug_T28.py  debug_T32.py  debug_T33.py  debug_T34.py  debug_T35.py  test_t10.py  test_t9.py
examples/output/: Memory_Canvas_d3.json
lspattern/: __init__.py  accumulator.py  canvas.py  canvas2.py  canvas_legacy.py  canvas_loader.py  canvas_parallel_hint.py  compile.py  compiler.py  corner_analysis.py  debug_utils.py  detector.py  export.py  fragment.py  fragment_builder.py  init_flow_analysis.py  loader.py  mytype.py  ops.py  plot_error_rate.py  rhg.py  rhg2.py  utils.py  video_3d.py  visualize.py  visualizer.py  visualizer_2d.py
lspattern/blocks/: __init__.py  base.py  init_plus.py  initialize.py  initialize2.py  layered_builder.py  measure.py  memory.py  skeleton.py  unit_layer.py
lspattern/canvas/: __init__.py  _canvas_impl.py  canvas.py  compiled.py  composition.py  coordinates.py  exceptions.py  graph_utils.py  layer.py  ports.py  seams.py
lspattern/consts/: __init__.py  consts.py
lspattern/exporter/: __init__.py  studio.py  types.py
lspattern/geom/: __init__.py  rhg_parity.py  tiler.py
lspattern/importer/: __init__.py  las.py  liblsqecc.py
lspattern/layout/: __init__.py  base.py  checkerboard.py  coordinates.py  rotated_surface_code.py
lspattern/new_blocks/: __init__.py  accumulator.py  base.py  block.py  canvas.py  canvas_loader.py  compiler.py  coord_utils.py  detector.py  layer_data.py  loader.py  mytype.py  simulator.py  unit_layer.py  vis.py  visualizer.py  visualizer_2d.py
lspattern/patch_layout/: README.md
lspattern/pipes/: base.py  initialize.py
lspattern/template/: base.py
lspattern/testing/: __init__.py  fingerprints.py
lspattern/tiling/: __init__.py  base.py  base_test.py  template.py  visualize.py
lspattern/visualizers/: __init__.py  accumulators.py  compiled_canvas.py  plotly_compiled_canvas.py  plotly_temporallayer.py  plotly_xflow.py  template.py  temporallayer.py  visualize.py
src/: typing_extensions.py
tests/: base_test.py  conftest.py  smoke_t8.py  snapshot_testing_guide.md  snapshotの手引き.md  test_T37_seam_edges_same_z.py  test_T39_memory.py  test_T41_blocks_basic.py  test_T42_skip.py  test_T43_compile_smoke.py  test_T48_skip.py  test_accumulator.py  test_basic_block_types_representation.py  test_canvas_compilation_smoke.py  test_canvas_loader_paths.py  test_canvas_snapshot_temporal_spatial.py  test_compute_logical_op_direction.py  test_consts.py  test_coord2node_integrity.py  test_corner_analysis.py  test_custom_noise_models.py  test_design_yaml_integration.py  test_dummy.py  test_export.py  test_exporter_studio.py  test_fingerprints.py  test_graph_block_yaml.py  test_importer_liblsqecc.py  test_init_flow_direction_analysis.py  test_inter_block_edges.py  test_invert_ancilla_order.py  test_las_hadamard.py  test_layered_blocks.py  test_layered_integration.py  test_logical_observable_features.py  test_measure_optimization.py  test_memory_blocks_ports_boundaries.py  test_merge_split_mockup_snapshot.py  test_merge_split_xx.py  test_mockup.py  (+12 more)
tests/canvas/: __init__.py  test_composition.py  test_coordinate_mapper.py  test_coordinates.py  test_graph_utils.py  test_port_manager.py  test_ports.py  test_seam_generator.py  test_seams.py
tests/integration/: conftest.py  test_cnot_integration.py  test_initialization_integration.py  test_memory_integration.py  test_merge_split_integration.py  test_merge_split_xx_integration.py
tests/new_blocks/: __init__.py  test_block.py  test_canvas_loader_paths.py  test_coord_utils.py  test_rotated_surface_code.py  test_unit_layer.py
tests/snapshots/: T43_compiled_canvas.json  mockup_compiled_canvas.json
tools/: gemini_mcp_server.py
(+85 files in other folders)
